# ripple

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  docker-compose.yml
benches/: config_bench.rs  logging_bench.rs  metrics_bench.rs
docs/: BENCHMARKS.md  CONFIGURATION.md  HEALTH_CHECKS.md  LOGGING.md  METRICS.md
scripts/: validate_config.sh
src/: main.rs
src/auth/: mod.rs
src/cache/: mod.rs
src/config/: mod.rs
src/embeddings/: mod.rs
src/metrics/: mod.rs  prometheus.rs
src/proxy/: mod.rs
src/utils/: errors.rs  health.rs  logging.rs  mod.rs
src/vector/: mod.rs
