[package]
name = "ripple"
version = "0.1.0"
edition = "2021"
authors = ["JAMI VIVEK"]
description = "High-Performance Semantic Caching Proxy for API Cost Reduction"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Environment / Config
dotenvy = "0.15"
anyhow = "1"

# Error handling
thiserror = "2"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"

# Metrics
prometheus = "0.13"
lazy_static = "1"

# HTTP server
axum = "0.8"
hyper = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Qdrant
qdrant-client = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[[bench]]
name = "config_bench"
harness = false

[[bench]]
name = "logging_bench"
harness = false

[[bench]]
name = "metrics_bench"
harness = false
